--- a/expirements notebooks/Time_series_tries14032024.ipynb
+++ b/expirements notebooks/Time_series_tries14032024.ipynb
@@ -7,41 +7,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Library import *\n",
+    "from src.Library import *\n",
     "from Data_Preparation import *\n",
     "#from Data_Preparation2 import *\n",
-    "import folium \n",
-    "import time\n",
-    "import scipy\n",
-    "import sklearn\n",
-    "from IPython.display import display\n",
-    "from sklearn import preprocessing\n",
-    "from itertools import combinations\n",
+    "import folium\n",
     "import pickle\n",
-    "from sklearn import decomposition\n",
-    "from icecream import ic \n",
-    "import os\n",
-    "from tqdm import tqdm\n",
-    "import requests\n",
-    "import nbimporter\n",
-    "from datetime import datetime\n",
+    "from icecream import ic\n",
     "from sklearn.mixture import GaussianMixture\n",
-    "from sklearn.metrics import roc_curve, auc , roc_auc_score, r2_score, accuracy_score , silhouette_score\n",
-    "from sklearn.model_selection import GridSearchCV\n",
     "from catboost import CatBoostClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "import reverse_geocoder as rg\n",
     "from datetime import datetime, time\n",
-    "import random\n",
     "import shutil\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.cluster import DBSCAN\n",
     "from IPython.display import Markdown, display\n",
-    "import geopandas as gpd\n",
-    "from translate import translator\n",
-    "from shapely.geometry import Point\n",
-    "from scipy.cluster.hierarchy import dendrogram, linkage, fcluster\n",
+    "\n",
+    "\n",
     "def printmd(string, color=None):\n",
     "    colorstr = \"<span style='color:{}'>{}</span>\".format(color, string)\n",
     "    display(Markdown(colorstr))"
@@ -228,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pprint import pprint\n",
+    "\n",
     "\n",
     "def get_data_of_cor(latitude, longitude):\n",
     "    url = f\"https://nominatim.openstreetmap.org/reverse?format=json&lat={latitude}&lon={longitude}\"\n",
@@ -253,10 +231,10 @@
      "evalue": "name 'get_data_of_cor' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_data_of_cor\u001b[49m(\u001b[38;5;241m32.165485\u001b[39m,\u001b[38;5;241m34.857773\u001b[39m)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtown\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'get_data_of_cor' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[20], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mget_data_of_cor\u001B[49m(\u001B[38;5;241m32.165485\u001B[39m,\u001B[38;5;241m34.857773\u001B[39m)[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124maddress\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtown\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'get_data_of_cor' is not defined"
      ]
     }
    ],
@@ -698,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "\n",
     "\n",
     "def get_road_coordinates(road_name):\n",
     "    url = f\"https://nominatim.openstreetmap.org/search?format=json&q={road_name}\"\n",
@@ -2557,10 +2535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import time\n",
-    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "def Prepare_coors_metadata_by_road_names(directory_d='/data/inputs/Year_Data/DRIVES', directory_g='/data/inputs/Year_Data/GPS', allowed_road_names=[]):\n",
     "    \"\"\"\n",
@@ -2854,7 +2829,6 @@
     "\n",
     "\n",
     "ללללליחךךללךלךלךלךלךללממממ+++++654544\n",
-    "import os\n",
     "importףךך,ף shutil\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -2908,7 +2882,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "\n",
     "import time\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
@@ -3058,8 +3032,7 @@
    "outputs": [],
    "source": [
     "from sklearn.cluster import DBSCAN\n",
-    "from fastdtw import fastdtw\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "def fastdtw_distance(x, y):\n",
     "    \"\"\"\n",
@@ -3128,9 +3101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import layers, models, losses, optimizers\n",
+    "\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
     "\n",
     "# Data Preparation\n",
     "# Assume you have time series data X_train and corresponding labels y_train\n",
@@ -4232,28 +4205,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.autograd as autograd\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
     "\n",
     "import pytorch_lightning as pl\n",
     "import seaborn as sns\n",
     "from pylab import rcParams\n",
-    "import matplotlib.pyplot as plt \n",
-    "from matplotlib import rc \n",
-    "from matplotlib.ticker import MaxNLocator \n",
     "\n",
-    "from sklearn.model_selection import train_test_split \n",
-    "from sklearn.preprocessing import LabelEncoder \n",
-    "\n",
-    "from multiprocessing import cpu_count \n",
-    "from pytorch_lightning.callbacks import ModelCheckpoint, EarlyStopping \n",
-    "from pytorch_lightning.loggers import TensorBoardLogger \n",
-    "from pytorch_lightning.metrics.functional import accuracy \n",
-    "from sklearn.metrics import classification_report, confusion_matrix  \n"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
